Add `BigNumber` struct

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,36 +1,20 @@
-name: Go
-on: [push]
+name: Go Tests
+
+on: [push, pull_request]
+
 jobs:
-
-  build:
-    name: Build
+  test:
     runs-on: ubuntu-latest
-    steps:
 
-    - name: Download Go
+    steps:
+    - name: Set up Go
       uses: actions/setup-go@v2
       with:
         go-version: 1.21.1
       id: go
 
-    - name: Set GOPATH
-      run: echo "::set-env name=GOPATH::${{ github.workspace }}"
-
-    - name: Check out code into the Go module directory
+    - name: Check out code
       uses: actions/checkout@v2
 
-    - name: Get dependencies
-      run: |
-        export PATH="${{ github.workspace }}/bin:${PATH}"
-        go get -v -t -d ./...
-
-    - name: Build
-      env:
-        GOPROXY: "https://proxy.golang.org"
-      run: go build ./src
-
-    - name: Test
-      env:
-        GOPROXY: "https://proxy.golang.org"
-      run: go test -v ./src/tests/
-      
+    - name: Run tests
+      run: go test -v ./src/tests
